# nonebot_plugin_animalVoice

./: README.md  pyproject.toml
nonebot_plugin_animalVoice/: __init__.py  animalvoice_main.py  cheru_main.py  config.py  pyproject.toml
nonebot_plugin_animalVoice/AnimalVoice/: __init__.py  converter.py
nonebot_plugin_animalVoice/Cheru/: __init__.py
